sistemato i bug e accorciato il codice .js e .json

--- a/bonus/pagina_index_dinamica/index.html
+++ b/bonus/pagina_index_dinamica/index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>Pagina dinamica html-london-trip</title>
-
-    <!-- <link rel="stylesheet" href="style.css"> -->
 </head>
 <body>
     <!-- Basta accendere solo questa paggina con LIVE SERVER, il resto lo fa da solo con javascript -->
-    <script src="introdureHTML_in_HTML.js"></script>
+    <script src="nuovojs.js"></script>
 </body>
 </html>
