aggiunta del <header>

--- a/bonus/pagina_index_dinamica/pezzi_HTML/il_mio_viaggio_a_london.html
+++ b/bonus/pagina_index_dinamica/pezzi_HTML/il_mio_viaggio_a_london.html
@@ -1,7 +1,9 @@
-<!-- immagini della città con la ruota panoramica -->
-<h1>Il mio Viaggio a London</h1>
+<header>
+    <!-- immagini della città con la ruota panoramica -->
+    <h1>Il mio Viaggio a London</h1>
 
-<img src="img/pexels-bill-emrich-230794-0.jpg" alt="immagine sinistra della città con la ruota panoramica">
-<img src="img/pexels-bill-emrich-230794-1.jpg" alt="immagine centrale della città con il ponte">
-<img src="img/pexels-bill-emrich-230794-2.jpg" alt="immagine destra della città con la torre del orologgio">
-<hr>
+    <img src="img/pexels-bill-emrich-230794-0.jpg" alt="immagine sinistra della città con la ruota panoramica">
+    <img src="img/pexels-bill-emrich-230794-1.jpg" alt="immagine centrale della città con il ponte">
+    <img src="img/pexels-bill-emrich-230794-2.jpg" alt="immagine destra della città con la torre del orologgio">
+    <hr>
+</header>
